--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="card-body">
                             <h5 class="card-title">박포토</h5>
                             <p class="card-text">늙고 병든 노인 사진사</p>
-                            <a href="https://naver.me/5bXizhib" class="btn btn-primary">홈페이지 방문</a>
+                            <a href="http://gaemi19.com/paju/" class="btn btn-primary">홈페이지 방문</a>
                         </div>
                     </div>
                 </div>
